# test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml
backend/: config.py  main.py
backend/agents/: orchestrator.py  registry.py
backend/chat/: models.py  router.py  session.py
backend/intent/: prompts.py  translator.py
backend/middleware/: ceo_filter.py  progressive_disclosure.py
backend/tools/: cost_tracker.py  feedback.py  github_sync.py  preview.py  project_state.py  workspace.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AgentPipeline.tsx  AgentStatus.tsx  Chat.tsx  Dashboard.tsx  MessageBubble.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: messages.ts
tests/: test_agents.py  test_feedback.py  test_intent_translator.py  test_preview.py  test_session.py
